[package]
name = "treebuild"
version = "0.1.0"
authors = ["Omer Tuchfeld <omertuchfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14.1"
approx = "0.3.2"
rand = "0.7.3"
itertools = "0.9.0"
md5 = "0.7.0"
sysinfo = "0.14.15"